--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,10 +1,10 @@
 #Minecraft server properties
-#Sun Dec 15 04:55:03 UTC 2024
+#Sun Dec 15 05:27:44 UTC 2024
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
-difficulty=hard
+difficulty=easy
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -15,7 +15,7 @@ enforce-whitelist=false
 entity-broadcast-range-percentage=100
 force-gamemode=false
 function-permission-level=2
-gamemode=creative
+gamemode=survival
 generate-structures=true
 generator-settings={}
 hardcore=false
